# ParaCompiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  requirements.txt  test.pcl
.github/workflows/: main.yml
src/: CMakeLists.txt  antlr_parser.cppm  antlr_parser.hpp  ast.cppm  ast.hpp  compiler.cppm  compiler.hpp  default_visitor.cppm  default_visitor.hpp  dump_visitor.cppm  dump_visitor.hpp  llvm_emitter.cppm  llvm_emitter.hpp  main.cpp  parastdlib.cpp  parastdlib.hpp  symbol.cppm  symbol.hpp  type_checker.cppm  type_checker.hpp  types.cppm  types.hpp  visitor.cppm  visitor.hpp
src/grammar/: ParaCL.g4
tests/: CMakeLists.txt  lit.cfg.py
tests/lit/: complex_expr.pcl  fibonacci.pcl  func_ptr_io.pcl  scope_shadowing.pcl  simple_assignement.pcl  smoke.pcl  struct_glue.pcl  types_overflow.pcl
tests/scripts/: llm_generator.py
